# siphon-tui

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  getting-started.md  index.md  roadmap.md
src/siphon/: __init__.py  __main__.py  args.py  cli.py
src/siphon/config/: __init__.py  constants.py  paths.py  settings.py
src/siphon/engine/: __init__.py  cancellation.py  choice_builder.py  downloader.py  errors.py  probe.py
src/siphon/models/: __init__.py  choice.py  history_entry.py  phase.py  platform.py  progress.py  theme.py
src/siphon/services/: __init__.py  clipboard.py  ffmpeg_discovery.py  history.py  platforms.py  update_check.py
src/siphon/ui/: __init__.py  app.py  commands.py  messages.py  theme.py
src/siphon/ui/animations/: __init__.py  logo_animation.py
src/siphon/ui/screens/: history.py  main.py
src/siphon/ui/widgets/: __init__.py  choice_list.py  download_status.py  framed_input.py  logo.py  panel.py  progress_bar.py  shortcuts.py  tagline.py  text_input.py
src/siphon/utils/: __init__.py  format.py
src/siphon/workers/: __init__.py  download_worker.py  probe_worker.py
tests/: conftest.py
tests/ui/: test_app_smoke.py  test_command_palette.py  test_download_phase.py  test_forged_button.py  test_full_flow.py  test_history_modal.py  test_input_phase.py  test_picking_phase.py  test_theme_cycle.py  test_widget_snapshots.py
tests/unit/: test_args.py  test_cancellation.py  test_choice_builder.py  test_cli.py  test_clipboard.py  test_downloader.py  test_errors.py  test_ffmpeg_discovery.py  test_format.py  test_history.py  test_history_entry.py  test_history_migration.py  test_logo.py  test_logo_animation.py  test_platforms.py  test_progress_model.py  test_settings.py  test_theme_model.py  test_update_check.py
