[project]
name = "siphon-tui"
version = "0.1.0"
description = "A polished terminal UI for downloading videos from ~1,800 sites via yt-dlp. Paste. Sip. Done."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Siphon contributors" }]
keywords = ["yt-dlp", "video", "download", "tui", "textual", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.83",
    "rich>=13.9",
    "yt-dlp>=2025.1.15",
    "pyperclip>=1.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "tomli-w>=1.0",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-textual-snapshot>=1.0",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "textual-dev>=1.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
siphon = "siphon.cli:main"

[project.urls]
Homepage = "https://github.com/richmondkorsah/siphon-cli"
Issues = "https://github.com/richmondkorsah/siphon-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siphon"]

[tool.hatch.build.targets.sdist]
include = ["src/siphon", "README.md", "LICENSE", "pyproject.toml"]

# ---------------------------------------------------------------------------
# Ruff — lint + import sort
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "PL",  # pylint (subset)
    "TID", # tidy imports
    "N",   # pep8-naming
]
ignore = [
    "E501",     # line too long — Black handles it
    "PLR2004",  # magic values — pragmatic for UI code
    "PLR0913",  # too many arguments
    "PLR0911",  # too many returns — dispatchy parsers are clearer this way
    "PLR0912",  # too many branches — same
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]

# ---------------------------------------------------------------------------
# Black — formatting
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py313"]

# ---------------------------------------------------------------------------
# mypy — strict typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pyperclip", "yt_dlp.*", "imageio_ffmpeg"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
